moved ui-components to plugin

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -9,6 +9,7 @@
         "dev": "npm run lint && vite build --watch --mode development",
         "build": "npx svelte-check && vite build --mode development",
         "build:prod": "npx svelte-check && vite build --mode production",
+        "check": "svelte-check --tsconfig ./tsconfig.json",
         "bumpversion": "node version-bump.mjs && git add manifest.json versions.json",
         "storybook": "storybook dev -p 5201 --no-open",
         "build-storybook": "storybook build"
@@ -18,13 +19,14 @@
     "devDependencies": {
         "@codemirror/state": "6.2.0",
         "@codemirror/view": "6.7.3",
-        "@storybook/addon-essentials": "^7.0.2",
-        "@storybook/addon-interactions": "^7.0.2",
-        "@storybook/addon-links": "^7.0.2",
-        "@storybook/blocks": "^7.0.2",
-        "@storybook/svelte": "^7.0.2",
-        "@storybook/svelte-vite": "^7.0.2",
-        "@storybook/testing-library": "^0.0.14-next.2",
+        "@floating-ui/dom": "1.1.1",
+        "@storybook/addon-essentials": "7.0.2",
+        "@storybook/addon-interactions": "7.0.2",
+        "@storybook/addon-links": "7.0.2",
+        "@storybook/blocks": "7.0.2",
+        "@storybook/svelte": "7.0.2",
+        "@storybook/svelte-vite": "7.0.2",
+        "@storybook/testing-library": "0.0.14-next.2",
         "@sveltejs/vite-plugin-svelte": "2.0.2",
         "@tailwindcss/forms": "0.5.3",
         "@tsconfig/svelte": "3.0.0",
@@ -39,16 +41,15 @@
         "obsidian": "1.1.1",
         "postcss": "8.4.21",
         "postcss-load-config": "4.0.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "storybook": "^7.0.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "storybook": "7.0.2",
         "svelte": "3.55.1",
         "svelte-check": "3.0.2",
         "svelte-preprocess": "5.0.0",
         "tailwindcss": "3.2.4",
         "tslib": "2.4.1",
         "typescript": "4.9.4",
-        "ui-components": "../ui_components/package",
         "vite": "4.0.4"
     },
     "peerDependencies": {}
