--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "obsidian-krake",
     "type": "module",
-    "version": "2.0.10",
+    "version": "2.0.11",
     "description": "TODO",
     "main": "main.js",
     "scripts": {
@@ -17,9 +17,10 @@
     },
     "keywords": [],
     "author": "kuechlerm@gmail.com",
+    "dependencies": {},
     "devDependencies": {
         "@codemirror/state": "6.2.0",
-        "@codemirror/view": "6.9.5",
+        "@codemirror/view": "6.9.6",
         "@floating-ui/dom": "1.2.6",
         "@storybook/addon-essentials": "7.0.6",
         "@storybook/addon-interactions": "7.0.6",
@@ -28,19 +29,19 @@
         "@storybook/svelte": "7.0.6",
         "@storybook/svelte-vite": "7.0.6",
         "@storybook/testing-library": "0.1.0",
-        "@sveltejs/vite-plugin-svelte": "2.0.4",
+        "@sveltejs/vite-plugin-svelte": "2.1.0",
         "@tailwindcss/forms": "0.5.3",
         "@tsconfig/svelte": "4.0.1",
-        "@types/node": "18.15.11",
+        "@types/node": "18.15.13",
         "@typescript-eslint/eslint-plugin": "5.59.0",
         "@typescript-eslint/parser": "5.59.0",
         "autoprefixer": "10.4.14",
         "builtin-modules": "3.3.0",
         "date-fns": "2.29.3",
-        "eslint": "8.38.0",
+        "eslint": "8.39.0",
         "eslint-plugin-svelte3": "4.0.0",
-        "obsidian": "1.2.3",
-        "postcss": "8.4.22",
+        "obsidian": "1.2.5",
+        "postcss": "8.4.23",
         "postcss-load-config": "4.0.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -51,7 +52,7 @@
         "tailwindcss": "3.3.1",
         "tslib": "2.5.0",
         "typescript": "5.0.4",
-        "vite": "4.2.2",
+        "vite": "4.3.1",
         "vitest": "0.30.1"
     },
     "peerDependencies": {}
