--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "obsidian-krake",
     "type": "module",
-    "version": "2.0.11",
+    "version": "2.0.12",
     "description": "TODO",
     "main": "main.js",
     "scripts": {
@@ -13,28 +13,28 @@
         "bumpversion": "node version-bump.mjs",
         "storybook": "storybook dev -p 5201 --no-open",
         "build-storybook": "storybook build",
-        "test:unit": "vitest"
+        "test:unit": "vitest",
+        "update:all": "pnpm -r up -i -L"
     },
     "keywords": [],
     "author": "kuechlerm@gmail.com",
-    "dependencies": {},
     "devDependencies": {
         "@codemirror/state": "6.2.0",
         "@codemirror/view": "6.9.6",
         "@floating-ui/dom": "1.2.6",
-        "@storybook/addon-essentials": "7.0.6",
-        "@storybook/addon-interactions": "7.0.6",
-        "@storybook/addon-links": "7.0.6",
-        "@storybook/blocks": "7.0.6",
-        "@storybook/svelte": "7.0.6",
-        "@storybook/svelte-vite": "7.0.6",
+        "@storybook/addon-essentials": "7.0.7",
+        "@storybook/addon-interactions": "7.0.7",
+        "@storybook/addon-links": "7.0.7",
+        "@storybook/blocks": "7.0.7",
+        "@storybook/svelte": "7.0.7",
+        "@storybook/svelte-vite": "7.0.7",
         "@storybook/testing-library": "0.1.0",
         "@sveltejs/vite-plugin-svelte": "2.1.0",
         "@tailwindcss/forms": "0.5.3",
         "@tsconfig/svelte": "4.0.1",
-        "@types/node": "18.15.13",
-        "@typescript-eslint/eslint-plugin": "5.59.0",
-        "@typescript-eslint/parser": "5.59.0",
+        "@types/node": "18.16.0",
+        "@typescript-eslint/eslint-plugin": "5.59.1",
+        "@typescript-eslint/parser": "5.59.1",
         "autoprefixer": "10.4.14",
         "builtin-modules": "3.3.0",
         "date-fns": "2.29.3",
@@ -45,15 +45,15 @@
         "postcss-load-config": "4.0.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "storybook": "7.0.6",
+        "storybook": "7.0.7",
         "svelte": "3.58.0",
         "svelte-check": "3.2.0",
         "svelte-preprocess": "5.0.3",
         "tailwindcss": "3.3.1",
+        "tou-calendar": "github:kuechlerm/tou-calendar",
         "tslib": "2.5.0",
         "typescript": "5.0.4",
         "vite": "4.3.1",
         "vitest": "0.30.1"
-    },
-    "peerDependencies": {}
+    }
 }
